<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="@id/fifatext"
        android:contentDescription="@string/fifalogo"
        android:src="@drawable/fifalogo" />

    <TextView
        android:id="@+id/fifatext"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/fifatext"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_green_dark" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/teama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="60dp"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/usa"
                    android:src="@drawable/usa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/teamusa"
                    android:textColor="#404040"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/team_USA_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/score"
                android:textColor="@color/textColor"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/team_USA_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/cardcnt"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="addOneForTeamUSA"
                android:text="@string/plus1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="addCardsForTeamUSA"
                android:text="@string/yellowcard" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="addOneForTeamUSA"
                android:text="@string/penalty" />

        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:background="@android:color/holo_green_dark" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="60dp"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/ned"
                    android:src="@drawable/ned" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/teamned"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/team_NED_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/score"
                android:textColor="@color/textColor"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/team_NED_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/cardcnt"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="addOneForTeamNED"
                android:text="@string/plus1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="addCardsForTeamNED"
                android:text="@string/yellowcard" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="addOneForTeamNED"
                android:text="@string/penalty" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/winning_team"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/buttons"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/winner"
        android:textColor="#000000"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="32dp"
            android:onClick="resetScore"
            android:text="@string/reset" />

        <Button
            android:id="@+id/gameover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="32dp"
            android:onClick="WinningTeam"
            android:text="@string/gameover" />
    </LinearLayout>
</RelativeLayout>